# advent-of-code

./: .gitignore  .reflex_lisp  001.rkt  README.md
2015/: 001.rkt  002.clj  002.jl  003.rkt  004.rkt  006.rkt  007.rkt  009.dot  009.rkt  010.rkt  011.rkt  012.json  012.rkt  013-2.txt  013.rkt  014.clj  hamiltonian.rkt
2016/: .reflex_lisp  01.rkt  01.txt  03.lisp  04.lisp  package.lisp
2016/05/: build.gradle.kts
2016/day03_rust/: Cargo.toml
2016/day03_rust/src/: main.rs
2016/day06/: day06.nimble
2017/: .reflex  .reflex_lisp  01.lisp  01.rkt
2018/: .reflex  01.rkt  02.rkt  03.rkt  04.rkt  05.rkt  06.rkt  07.rkt  08.rkt  08_part1_typed.rkt  09.rkt  09_part2_typed.rkt  10.clj  11.clj  project.clj  utils.rkt
2019/: .reflex_clojure  01.clj  01.lisp  02.lisp  02.txt  03.lisp  03.txt  04.lisp  04.txt  06.lisp  08.lisp  08_part2.lisp  10.lisp  10.txt  12.lisp  project.clj
2020/: Dockerfile  README.md
2020/01/: Cargo.toml
2020/01/src/: main.rs
2020/02/: Cargo.toml
2020/02/src/: main.rs
2020/03/: Cargo.toml
2020/03/src/: main.rs  part1.rs
2020/04/: Cargo.toml
2020/04/src/: main.rs  part1.rs
2020/05/: Cargo.toml
2020/05/src/: main.rs  part1.rs
2020/06/: Cargo.toml
2020/06/src/: main.rs
2020/07/: 07.rkt
2020/08/: Cargo.toml
2020/08/src/: main.rs
2020/09/: Cargo.toml
2020/09/src/: main.rs
2020/10/: Aoc2020_day10_pt2.nb  Cargo.toml
2020/10/src/: main.rs
2020/11/: Cargo.toml
2020/11/src/: main.rs
2021/: Dockerfile  README.md
2021/01/: Cargo.toml
2021/02/: 02.rkt
2021/03/: .gitignore  project.clj
2023/01/: Cargo.toml
(+5 files in other folders)
