[package]
name = "aoc2020_03"
version = "0.1.0"
authors = ["Daniel Kvasnicka <daniel.kvasnicka@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
