[package]
name = "aoc2020_08"
version = "0.1.0"
authors = ["Daniel Kvasnicka <daniel.kvasnicka@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.9.0"
literally = "0.1.3"
